--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
 }
 
 #banner-section {
-  background-image: url(./assets/hero-bg.png);
+  background-image: url(assets/hero-bg.png);
   background-size: cover;       
   background-position: center;  
   background-repeat: no-repeat;
